# AI-meter-reading

./: .gitignore  NOTICE  README.md  pyproject.toml
configs/dataset/: roboflow.yml  tensorflow_to_simpleDataset.yml
configs/e2e/: e2e_yt.yml
configs/rec/: configPaddle.yml  configYOLO.yml
docker/: training.Dockerfile
notebooks/: AI_reading_meter_YOLO.ipynb  Challenge_Suez_PaddleOCR.ipynb
scripts/: convert_tensorflow_simpleDataset.sh  deploy.sh  download_ppocrv3.sh  trainPaddleOCR.sh
src/: __init__.py  app.py  dataLoader.py  model.py  preprocessing.py  requirements.txt
src/dataset/: build_dataset.py  denoising.py
src/paddleocr_meter_reading/: __init__.py  exportPaddleModel.py  trainPaddleOCR.py
src/utils/: __init__.py  format_labels.py  metrics.py
src/yolo_meter_reading/: model.py  text_detection.py
tests/: testConverter.py  test_metrics.py
